Разметка - доработка ошибок

--- a/catalog.html
+++ b/catalog.html
@@ -54,40 +54,40 @@
                 <b class="tagline">СЕТКА:</b>
                 <div class="grid-list">
                   <div class="grid-item">
-                    <input type="radio" name="grid" id="grid-field">
-                    <label for="grid-field">Адаптивная</label>
+                    <input type="radio" name="grid" id="adaptability">
+                    <label for="adaptability">Адаптивная</label>
                   </div>
                   <div class="grid-item">
-                    <input type="radio" name="grid" id="grid-field">
-                    <label for="grid-field">Фиксированная</label>
+                    <input type="radio" name="grid" id="fixity">
+                    <label for="fixity">Фиксированная</label>
                   </div>
                   <div class="grid-item">
-                    <input type="radio" name="grid" id="grid-field">
-                    <label for="grid-field">Резиновая</label>
+                    <input type="radio" name="grid" id="rubber">
+                    <label for="rubber">Резиновая</label>
                   </div>
                 </div>
               </div>
               <div class="capabilities">
                 <b class="tagline">ОСОБЕННОСТИ:</b>
                 <div class="capabilities-ltem">
-                  <input type="checkbox" name="Slider" id="Slider" checked>
-                  <label for="Slider"></label>
+                  <input type="checkbox" name="Slider" id="slider-field" checked>
+                  <label for="slider-field">Слайдер</label>
                 </div>
                 <div class="capabilities-ltem">
-                  <input type="checkbox" name="advantages" id="advantages" checked>
-                  <label for="Slider"></label>
+                  <input type="checkbox" name="advantages" id="advantages">
+                  <label for="advantages">Блок преимуществ</label>
                 </div>
                 <div class="capabilities-ltem">
-                  <input type="checkbox" name="news" id="news" checked>
-                  <label for="Slider"></label>
+                  <input type="checkbox" name="news" id="news">
+                  <label for="news">Новости</label>
                 </div>
                 <div class="capabilities-ltem">
-                  <input type="checkbox" name="gallery" id="gallery" checked>
-                  <label for="Slider"></label>
+                  <input type="checkbox" name="gallery" id="gallery">
+                  <label for="gallery">Галерея</label>
                 </div>
                 <div class="capabilities-ltem">
-                  <input type="checkbox" name="basket" id="basket" checked>
-                  <label for="Slider"></label>
+                  <input type="checkbox" name="basket" id="basket">
+                  <label for="basket">Корзина</label>
                 </div>
                 <div class="button">
                   <button type="submit">ПОКАЗАТЬ</button>
@@ -97,160 +97,134 @@
           </div>
         </aside>
         <div class="container-item">
-          <div class="sorting">
-            <p class="text">СОРТИРОВАТЬ:</p>
-            <div class="sorting-item">
+          <p class="text">СОРТИРОВАТЬ:</p>
+          <ul class="sorting">
+            <li class="sorting-list">
               <a class="sorting-link" href="">По цене</a>
+            </li>
+            <li class="sorting-list">
               <a class="sorting-link" href="">По типу</a>
+            </li>
+            <li class="sorting-list">
               <a class="sorting-link" href="">По названию</a>
-            </div>
-            <div class="sorting-list">
-             <a class="sorting-link" href=""></a>
-             <a class="sorting-link" href=""></a>
-            </div>
-          </div>
-          <div class="services">
-            <article class="services-item">
-              <div class="points">
-                <div class="points-item">
+            </li>
+            <li class="sorting-list">
+              <a class="sorting-link" href=""></a>
+            </li>
+            <li class="sorting-list">
+              <a class="sorting-link" href=""></a>
+            </li>
+          </ul>
+          <ul class="services">
+            <li>
+              <article class="services-item">
+                <div class="points">
                   <span></span>
                   <span></span>
                   <span></span>
                 </div>
-              </div>
-              <div class="picture">
-                <img class="picture-list" src="#" alt="картинка">
-              </div>
-              <div class="text-item">
+                <div class="picture">
+                  <img class="picture-list" src="#" alt="картинка">
+              ` </div>
                 <p class="text"></p>
-              </div>
-              <section class="information">
-                <h2 class="head">Sedona</h2>
-                <p class="text">Информационный сайт для туристов</p>
-                <a claaa="link" href="#">9 900 руб.</a>
-              </section>
-            </article>
-            <article class="services-item">
-              <div class="points">
-                <div class="points-item">
+                <section class="information">
+                  <h2 class="head"><a href="">Sedona</a></h2>
+                  <p class="text">Информационный сайт для туристов</p>
+                  <a claaa="link" href="#">9 900 руб.</a>
+                </section>
+              </article>
+            </li>
+            <li>
+              <article class="services-item">
+                <div class="points">
                   <span></span>
                   <span></span>
                   <span></span>
                 </div>
-              </div>
-              <div class="picture">
-                <img class="picture-list" src="#" alt="картинка">
-              </div>
-              <div class="text-item">
+                <div class="picture">
+                  <img class="picture-list" src="#" alt="картинка">
+                </div>
                 <p class="text"></p>
-              </div>
-              <section class="information">
-                <h2>A Plus</h2>
-                <p class="text">Лендинг курсов повышения квалификации</p>
-                <a claaa="link" href="#">9 900 руб.</a>
-              </section>
-            </article>
-            <article class="services-item">
-              <div class="points">
-                <div class="points-item">
+                <section class="information">
+                  <h2><a href="">Pink App</a></h2>
+                  <p class="text">Продуктовый лендинг приложения для iOS и Android</p>
+                  <a claaa="link" href="#">9 900 руб.</a>
+                </section>
+              </article>
+            </li>
+            <li>
+              <article class="services-item">
+                <div class="points">
                   <span></span>
                   <span></span>
                   <span></span>
                 </div>
-              </div>
-              <div class="picture">
-                <img class="picture-list" src="#" alt="картинка">
-              </div>
-              <div class="text-item">
+                <div class="picture">
+                  <img class="picture-list" src="#" alt="картинка">
+                </div>
                 <p class="text"></p>
-              </div>
-              <section class="information">
-                <h2 class="head">Pink App</h2>
-                <p class="text">Продуктовый лендинг приложения для iOS и Android</p>
-                <a claaa="link" href="#">9 900 руб.</a>
-              </section>
-            </article>
-            <article class="services-item">
-              <div class="points">
-                <div class="points-item">
+                <section class="information">
+                  <h2 class="head"><a href="">Barbershop</a></h2>
+                  <p class="text">Сайт салоны красоты.Для мужчин, да.</p>
+                  <a claaa="link" href="#">9 900 руб.</a>
+                </section>
+              </article>
+            </li>
+            <li>
+              <article class="services-item">
+                <div class="points">
                   <span></span>
                   <span></span>
                   <span></span>
                 </div>
-              </div>
-              <div class="picture">
-                <img class="picture-list" src="#" alt="картинка">
-              </div>
-              <div class="text-item">
+                <div class="picture">
+                  <img class="picture-list" src="#" alt="картинка">
+                </div>
                 <p class="text"></p>
-              </div>
-              <section class="information">
-                <h2 class="head">Barbershop</h2>
-                <p class="text">Сайт салоны красоты.Для мужчин, да.</p>
-                <a claaa="link" href="#">9 900 руб.</a>
-              </section>
-            </article>
-            <article class="services-item">
-              <div class="points">
-                <div class="points-item">
+                <section class="information">
+                  <h2 class="head"><a href="">MISHKA</a></h2>
+                  <p class="text">Интернет-магазин вязаных игрушек</p>
+                  <a claaa="link" href="#">9 900 руб.</a>
+                </section>
+              </article>
+            </li>
+            <li>
+              <article class="services-item">
+                <div class="points">
                   <span></span>
                   <span></span>
                   <span></span>
                 </div>
-              </div>
-              <div class="picture">
-                <img class="picture-list" src="#" alt="картинка">
-              </div>
-              <div class="text-item">
+                <div class="picture">
+                  <img class="picture-list" src="#" alt="картинка">
+                </div>
                 <p class="text"></p>
-              </div>
-              <section class="information">
-                <h2 class="head">MISHKA</h2>
-                <p class="text">Интернет-магазин вязаных игрушек</p>
-                <a claaa="link" href="#">9 900 руб.</a>
-              </section>
-            </article>
-            <article class="services-item">
-              <div class="points">
-                <div class="points-item">
+                <section class="information">
+                  <h2 class="head"><a href="">A Plus</a></h2>
+                  <p class="text">Лендинг курсов повышения квалификации</p>
+                  <a claaa="link" href="#">9 900 руб.</a>
+                </section>
+              </article>
+            </li>
+            <li>
+              <article class="services-item">
+                <div class="points">
                   <span></span>
                   <span></span>
                   <span></span>
                 </div>
-              </div>
-              <div class="picture">
-                <img class="picture-list" src="#" alt="картинка">
-              </div>
-              <div class="text-item">
-                <p class="text"></p>
-              </div>
-              <section class="information">
-                <h2 class="head">A Plus</h2>
-                <p class="text">Лендинг курсов повышения квалификации</p>
-                <a claaa="link" href="#">9 900 руб.</a>
-              </section>
-            </article>
-            <article class="services-item">
-              <div class="points">
-                <div class="points-item">
-                  <span></span>
-                  <span></span>
-                  <span></span>
+                <div class="picture">
+                  <img class="picture-list" src="#" alt="картинка">
                 </div>
-              </div>
-              <div class="picture">
-                <img class="picture-list" src="#" alt="картинка">
-              </div>
-              <div class="text-item">
                 <p class="text"></p>
-              </div>
-              <section class="information">
-                <h2 class="head">КВАСТ</h2>
-                <p class="text">Промо-сайт производителя крафтового кваса</p>
-                <a claaa="link" href="#">9 900 руб.</a>
-              </section>
-            </article>
-          </div>
+                <section class="information">
+                  <h2 class="head"><a href="">КВАСТ</a></h2>
+                  <p class="text">Промо-сайт производителя крафтового кваса</p>
+                  <a claaa="link" href="#">9 900 руб.</a>
+                </section>
+              </article>
+           </li>
+          </ul>
         </div>
         <div class="pages-list">
           <a class="pages-link" href="">1</a>
@@ -263,7 +237,7 @@
         <div class="footer-contacts">
           <h3 class="head">NЁRDS DESIGN STUDIO</h3>
           <p class="text">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
-          <a claaa="link" href="#">НАПИШИТЕ НАМ</a>
+          <a class="link" href="#">НАПИШИТЕ НАМ</a>
         </div>
       </section>
     </main>
@@ -271,11 +245,17 @@
       <div class="container">
         <b class="tagline">Давайте дружить, это выгодно!</b>
         <p class="text">Скидка 10% для друзей из социальных сетей.</p>
-        <div class="footer-social">
-          <a class="social social-vk" href="#"></a>
-          <a class="social social-fb" href="#"></a>
-          <a class="social social-in" href="#"></a>
-        </div>
+        <ul class="social-list">
+          <li class="social-item">
+            <a class="social social-vk" href="#"></a>
+          </li>
+          <li class="social-item">
+            <a class="social social-fb" href="#"></a>
+          </li>
+          <li class="social-item">
+            <a class="social social-in" href="#"></a>
+          </li>
+        </ul>
       </div>
     </footer>
     <form action="me" method="post">
