--- a/index.html
+++ b/index.html
@@ -40,21 +40,23 @@
               <label for="slider-3"></label>
             </div>
           </div>
-          <div class="slider-item">
-            <b class="tagline">Долго, дорого, скорпулезно</b>
-            <p class="text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-            <a claaa="link" href="#">Узнать больше</a>
-          </div>
-          <div class="slider-item">
-            <b class="tagline">Любим математикукак никто другой</b>
-            <p class="text">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-            <a claaa="link" href="#">Узнать больше</a>
-          </div>
-          <div class="slider-item">
-            <b class="tagline">Только ночь, только хардкор</b>
-            <p class="text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-            <a claaa="link" href="#">Узнать больше</a>
-          </div>
+          <ul class="carousel">
+            <li class="carousel-item">
+              <b class="tagline">Долго, дорого, скорпулезно</b>
+              <p class="text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+              <a claaa="link" href="#">Узнать больше</a>
+            </li>
+            <li class="carousel-item">
+              <b class="tagline">Любим математикукак никто другой</b>
+              <p class="text">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+              <a claaa="link" href="#">Узнать больше</a>
+            </li>
+            <li class="carousel-item">
+              <b class="tagline">Только ночь, только хардкор</b>
+              <p class="text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+              <a claaa="link" href="#">Узнать больше</a>
+            </li>
+          </ul>
         </div>
       </div>
     </header>
@@ -120,7 +122,7 @@
         <div class="footer-contacts">
           <h3 class="head">NЁRDS DESIGN STUDIO</h3>
           <p class="text">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
-          <a claaa="link" href="#">НАПИШИТЕ НАМ</a>
+          <a class="link" href="#">НАПИШИТЕ НАМ</a>
         </div>
       </section>
     </main>
@@ -128,11 +130,17 @@
       <div class="container">
         <b class="tagline">Давайте дружить, это выгодно!</b>
         <p class="text">Скидка 10% для друзей из социальных сетей.</p>
-        <div class="footer-social">
-          <a class="social social-vk" href="#"></a>
-          <a class="social social-fb" href="#"></a>
-          <a class="social social-in" href="#"></a>
-        </div>
+        <ul class="social-list">
+          <li class="social-item">
+            <a class="social social-vk" href="#"></a>
+          </li>
+          <li class="social-item">
+            <a class="social social-fb" href="#"></a>
+          </li>
+          <li class="social-item">
+            <a class="social social-in" href="#"></a>
+          </li>
+        </ul>
       </div>
     </footer>
     <form action="me" method="post">
