Разметка - небольшая поправочка

--- a/catalog.html
+++ b/catalog.html
@@ -130,7 +130,7 @@
                 <section class="information">
                   <h2 class="head"><a href="">Sedona</a></h2>
                   <p class="text">Информационный сайт для туристов</p>
-                  <a claaa="link" href="#">9 900 руб.</a>
+                  <a class="link" href="#">9 900 руб.</a>
                 </section>
               </article>
             </li>
@@ -148,7 +148,7 @@
                 <section class="information">
                   <h2><a href="">Pink App</a></h2>
                   <p class="text">Продуктовый лендинг приложения для iOS и Android</p>
-                  <a claaa="link" href="#">9 900 руб.</a>
+                  <a class="link" href="#">9 900 руб.</a>
                 </section>
               </article>
             </li>
@@ -166,7 +166,7 @@
                 <section class="information">
                   <h2 class="head"><a href="">Barbershop</a></h2>
                   <p class="text">Сайт салоны красоты.Для мужчин, да.</p>
-                  <a claaa="link" href="#">9 900 руб.</a>
+                  <a class="link" href="#">9 900 руб.</a>
                 </section>
               </article>
             </li>
@@ -184,7 +184,7 @@
                 <section class="information">
                   <h2 class="head"><a href="">MISHKA</a></h2>
                   <p class="text">Интернет-магазин вязаных игрушек</p>
-                  <a claaa="link" href="#">9 900 руб.</a>
+                  <a class="link" href="#">9 900 руб.</a>
                 </section>
               </article>
             </li>
@@ -202,7 +202,7 @@
                 <section class="information">
                   <h2 class="head"><a href="">A Plus</a></h2>
                   <p class="text">Лендинг курсов повышения квалификации</p>
-                  <a claaa="link" href="#">9 900 руб.</a>
+                  <a class="link" href="#">9 900 руб.</a>
                 </section>
               </article>
             </li>
@@ -220,7 +220,7 @@
                 <section class="information">
                   <h2 class="head"><a href="">КВАСТ</a></h2>
                   <p class="text">Промо-сайт производителя крафтового кваса</p>
-                  <a claaa="link" href="#">9 900 руб.</a>
+                  <a class="link" href="#">9 900 руб.</a>
                 </section>
               </article>
            </li>
