--- a/index.html
+++ b/index.html
@@ -111,10 +111,18 @@
         </article>
         <section class="logo-list">
           <ul class="logo-item">
-            <li><a href="#"><img src="" alt="Академия"></a></li>
-            <li><a href="#"><img src="" alt="Бородински"></a></li>
-            <li><a href="#"><img src="" alt="Пинк"></a></li>
-            <li><a href="#"><img src="" alt="Мишка"></a></li>
+            <li class="logo-super-item">
+              <a class="logo-super-link" href="#"><img src="" alt="Академия"></a>
+            </li>
+            <li class="logo-super-item">
+              <a class="logo-super-link" href="#"><img src="" alt="Бородински"></a>
+            </li>
+            <li class="logo-super-item">
+              <a class="logo-super-link" href="#"><img src="" alt="Пинк"></a>
+            </li>
+            <li class="logo-super-item">
+              <a class="logo-super-link" href="#"><img src="" alt="Мишка"></a>
+            </li>
           </ul>
         </section>
       </div>
