--- a/catalog.html
+++ b/catalog.html
@@ -69,28 +69,28 @@
               </div>
               <div class="capabilities">
                 <b class="tagline">ОСОБЕННОСТИ:</b>
-                <div class="capabilities-ltem">
-                  <input type="checkbox" name="Slider" id="slider-field" checked>
+                <div class="capabilities-item">
+                  <input type="checkbox" name="slider" id="slider-field" checked>
                   <label for="slider-field">Слайдер</label>
                 </div>
-                <div class="capabilities-ltem">
+                <div class="capabilities-item">
                   <input type="checkbox" name="advantages" id="advantages">
                   <label for="advantages">Блок преимуществ</label>
                 </div>
-                <div class="capabilities-ltem">
+                <div class="capabilities-item">
                   <input type="checkbox" name="news" id="news">
                   <label for="news">Новости</label>
                 </div>
-                <div class="capabilities-ltem">
+                <div class="capabilities-item">
                   <input type="checkbox" name="gallery" id="gallery">
                   <label for="gallery">Галерея</label>
                 </div>
-                <div class="capabilities-ltem">
+                <div class="capabilities-item">
                   <input type="checkbox" name="basket" id="basket">
                   <label for="basket">Корзина</label>
                 </div>
                 <div class="button">
-                  <button type="submit">ПОКАЗАТЬ</button>
+                  <button class="link" type="submit">ПОКАЗАТЬ</button>
                 </div>
               </div>
             </form>
@@ -125,8 +125,7 @@
                 </div>
                 <div class="picture">
                   <img class="picture-list" src="#" alt="картинка">
-              ` </div>
-                <p class="text"></p>
+                </div>
                 <section class="information">
                   <h2 class="head"><a href="">Sedona</a></h2>
                   <p class="text">Информационный сайт для туристов</p>
@@ -144,7 +143,6 @@
                 <div class="picture">
                   <img class="picture-list" src="#" alt="картинка">
                 </div>
-                <p class="text"></p>
                 <section class="information">
                   <h2><a href="">Pink App</a></h2>
                   <p class="text">Продуктовый лендинг приложения для iOS и Android</p>
@@ -162,7 +160,6 @@
                 <div class="picture">
                   <img class="picture-list" src="#" alt="картинка">
                 </div>
-                <p class="text"></p>
                 <section class="information">
                   <h2 class="head"><a href="">Barbershop</a></h2>
                   <p class="text">Сайт салоны красоты.Для мужчин, да.</p>
@@ -180,7 +177,6 @@
                 <div class="picture">
                   <img class="picture-list" src="#" alt="картинка">
                 </div>
-                <p class="text"></p>
                 <section class="information">
                   <h2 class="head"><a href="">MISHKA</a></h2>
                   <p class="text">Интернет-магазин вязаных игрушек</p>
@@ -198,7 +194,6 @@
                 <div class="picture">
                   <img class="picture-list" src="#" alt="картинка">
                 </div>
-                <p class="text"></p>
                 <section class="information">
                   <h2 class="head"><a href="">A Plus</a></h2>
                   <p class="text">Лендинг курсов повышения квалификации</p>
@@ -216,7 +211,6 @@
                 <div class="picture">
                   <img class="picture-list" src="#" alt="картинка">
                 </div>
-                <p class="text"></p>
                 <section class="information">
                   <h2 class="head"><a href="">КВАСТ</a></h2>
                   <p class="text">Промо-сайт производителя крафтового кваса</p>
@@ -235,7 +229,7 @@
       </div>
       <section class="modal modal-map">
         <div class="footer-contacts">
-          <h3 class="head">NЁRDS DESIGN STUDIO</h3>
+          <h2 class="head">NЁRDS DESIGN STUDIO</h2>
           <p class="text">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
           <a class="link" href="#">НАПИШИТЕ НАМ</a>
         </div>
@@ -268,7 +262,7 @@
       </div>
       <label for="message-field">Текст письма:</label>
       <textarea name="message" id="message-field" value="В свободной форме"></textarea>
-      <button type="submit">ОТРРАВИТЬ</button>
+      <button class="link" type="submit">ОТРРАВИТЬ</button>
     </form>
   </body>
 </html>
