--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </nav>
         <div class="slider-list">
           <div class="slider-button">
-            <input class="btn-field" type="radio" name="slider-btn" id="slider-1" checked>
-            <input class="btn-second" type="radio" name="slider-btn" id="slider-2">
-            <input class="btn-last" type="radio" name="slider-btn" id="slider-3">
+            <input class="button-link" type="radio" name="slider-btn" id="slider-1" checked>
+            <input class="button-link" type="radio" name="slider-btn" id="slider-2">
+            <input class="button-link" type="radio" name="slider-btn" id="slider-3">
             <div class="slider-btn">
               <label for="slider-1"></label>
               <label for="slider-2"></label>
@@ -44,17 +44,17 @@
             <li class="carousel-item">
               <b class="tagline">Долго, дорого, скорпулезно</b>
               <p class="text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-              <a claaa="link" href="#">Узнать больше</a>
+              <a class="ink" href="#">Узнать больше</a>
             </li>
             <li class="carousel-item">
               <b class="tagline">Любим математикукак никто другой</b>
               <p class="text">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-              <a claaa="link" href="#">Узнать больше</a>
+              <a class="link" href="#">Узнать больше</a>
             </li>
             <li class="carousel-item">
               <b class="tagline">Только ночь, только хардкор</b>
               <p class="text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-              <a claaa="link" href="#">Узнать больше</a>
+              <a class="link" href="#">Узнать больше</a>
             </li>
           </ul>
         </div>
@@ -68,17 +68,17 @@
             <li class="features-item">
               <h3 class="head">Веб-сайты</h3>
               <p class="text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-              <a claaa="link" href="#">ЗАКАЗАТЬ</a>
+              <a class="link" href="#">ЗАКАЗАТЬ</a>
             </li>
             <li class="features-item">
               <h3 class="head">Приложения</h3>
               <p class="text">Покорите топ-10 приложений в AppStore и Google Play</p>
-              <a claaa="link" href="#">ЗАКАЗАТЬ</a>
+              <a class="link" href="#">ЗАКАЗАТЬ</a>
             </li>
             <li class="features-item">
               <h3 class="head">Презентации</h3>
               <p class="text">Вы даже не подозреваете, насколько вы изумительны!</p>
-              <a claaa="link" href="#">ЗАКАЗАТЬ</a>
+              <a class="link" href="#">ЗАКАЗАТЬ</a>
             </li>
           </ul>
         </section>
@@ -109,26 +109,26 @@
             </table>
           </aside>
         </article>
-        <section class="logo-list">
-          <ul class="logo-item">
-            <li class="logo-super-item">
-              <a class="logo-super-link" href="#"><img src="" alt="Академия"></a>
+        <section class="partners">
+          <ul class="logo-list">
+            <li class="logo-item">
+              <a class="logo-link" href="#"><img src="" alt="Академия"></a>
             </li>
-            <li class="logo-super-item">
-              <a class="logo-super-link" href="#"><img src="" alt="Бородински"></a>
+            <li class="logo-item">
+              <a class="logo-link" href="#"><img src="" alt="Бородински"></a>
             </li>
-            <li class="logo-super-item">
-              <a class="logo-super-link" href="#"><img src="" alt="Пинк"></a>
+            <li class="logo-item">
+              <a class="logo-link" href="#"><img src="" alt="Пинк"></a>
             </li>
-            <li class="logo-super-item">
-              <a class="logo-super-link" href="#"><img src="" alt="Мишка"></a>
+            <li class="logo-item">
+              <a class="logo-link" href="#"><img src="" alt="Мишка"></a>
             </li>
           </ul>
         </section>
       </div>
       <section class="modal modal-map">
         <div class="footer-contacts">
-          <h3 class="head">NЁRDS DESIGN STUDIO</h3>
+          <h2 class="head">NЁRDS DESIGN STUDIO</h2>
           <p class="text">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
           <a class="link" href="#">НАПИШИТЕ НАМ</a>
         </div>
@@ -161,7 +161,7 @@
       </div>
       <label for="message-field">Текст письма:</label>
       <textarea name="message" id="message-field" value="В свободной форме"></textarea>
-      <button type="submit">ОТРРАВИТЬ</button>
+      <button class="link" type="submit">ОТРРАВИТЬ</button>
     </form>
   </body>
 </html>
