--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,4 @@
-
-      <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="utf-8">
@@ -162,7 +161,7 @@
                 </div>
                 <section class="information">
                   <h2 class="head"><a href="">Barbershop</a></h2>
-                  <p class="text">Сайт салоны красоты.Для мужчин, да.</p>
+                  <p class="text">Сайт салоны красоты. Для мужчин, да.</p>
                   <a class="link" href="#">9 900 руб.</a>
                 </section>
               </article>
@@ -261,9 +260,8 @@
         <input type="text" name="email" id="email-field" value="email@example.com">
       </div>
       <label for="message-field">Текст письма:</label>
-      <textarea name="message" id="message-field" value="В свободной форме"></textarea>
+      <textarea name="message" id="message-field" placeholder="В свободной форме"></textarea>
       <button class="link" type="submit">ОТРРАВИТЬ</button>
     </form>
   </body>
 </html>
-
