--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div class="container">
         <nav class="main-navigation">
           <a class="logo">
-            <img src="logo" alt="логотип">
+            <img src="img/nerds-logo.svg" alt="логотип">
           </a>
           <ul class="menu-list">
             <li class="menu-item">
@@ -160,15 +160,8 @@
         <input type="text" name="email" id="email-field" value="email@example.com">
       </div>
       <label for="message-field">Текст письма:</label>
-      <textarea name="message" id="message-field" value="В свободной форме"></textarea>
+      <textarea name="message" id="message-field" placeholder="В свободной форме"></textarea>
       <button class="link" type="submit">ОТРРАВИТЬ</button>
     </form>
   </body>
 </html>
-
-
-
-
-
-
-
