Подготовка графики личного проекта

--- a/catalog.html
+++ b/catalog.html
@@ -123,7 +123,7 @@
                   <span></span>
                 </div>
                 <div class="picture">
-                  <img class="picture-list" src="#" alt="картинка">
+                  <img class="picture-list" src="img/img-sedona.jpg" alt="sedona">
                 </div>
                 <section class="information">
                   <h2 class="head"><a href="">Sedona</a></h2>
@@ -140,7 +140,7 @@
                   <span></span>
                 </div>
                 <div class="picture">
-                  <img class="picture-list" src="#" alt="картинка">
+                  <img class="picture-list" src="img/img-pink.jpg" alt="pink app">
                 </div>
                 <section class="information">
                   <h2><a href="">Pink App</a></h2>
@@ -157,7 +157,7 @@
                   <span></span>
                 </div>
                 <div class="picture">
-                  <img class="picture-list" src="#" alt="картинка">
+                  <img class="picture-list" src="img/img-barbershop.jpg" alt="barbershop">
                 </div>
                 <section class="information">
                   <h2 class="head"><a href="">Barbershop</a></h2>
@@ -174,7 +174,7 @@
                   <span></span>
                 </div>
                 <div class="picture">
-                  <img class="picture-list" src="#" alt="картинка">
+                  <img class="picture-list" src="img/img-mishka.jpg" alt="mishka">
                 </div>
                 <section class="information">
                   <h2 class="head"><a href="">MISHKA</a></h2>
@@ -191,7 +191,7 @@
                   <span></span>
                 </div>
                 <div class="picture">
-                  <img class="picture-list" src="#" alt="картинка">
+                  <img class="picture-list" src="img/img-aplus.jpg" alt="aplus">
                 </div>
                 <section class="information">
                   <h2 class="head"><a href="">A Plus</a></h2>
@@ -208,7 +208,7 @@
                   <span></span>
                 </div>
                 <div class="picture">
-                  <img class="picture-list" src="#" alt="картинка">
+                  <img class="picture-list" src="img/img-kvast.jpg" alt="kvast">
                 </div>
                 <section class="information">
                   <h2 class="head"><a href="">КВАСТ</a></h2>
